--- a/Course3_WEB_DB_JPA/ch07_JPA_conversion_memDB/memorydb/src/main/resources/application.yml
+++ b/Course3_WEB_DB_JPA/ch07_JPA_conversion_memDB/memorydb/src/main/resources/application.yml
@@ -8,12 +8,12 @@ spring:
         #        format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
   datasource:
-    url: jdbc:mysql://localhost:3306/user?userSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/book_store?userSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root1234!!
 logging:
   level:
     org.hibernate.SQL: DEBUG
-    org.hibernate.orm.jdbc.bind: TRACE
-#    org.hibernate.type.descriptor.sql: WARN
+#    org.hibernate.orm.jdbc.bind: TRACE
+    org.hibernate.type.descriptor.sql: WARN
