--- a/Course6_Spring_Batch/ch03_calculate_system/batch-campus/.gitignore
+++ b/Course6_Spring_Batch/ch03_calculate_system/batch-campus/.gitignore
@@ -3,7 +3,7 @@ HELP.md
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
-!**/src/main/**/resources/datas/
+!**/src/main/**/resources/datas/**
 !**/src/test/**/build/
 
 ### STS ###
