calculate system - spring batch

--- a/Course6_Spring_Batch/ch03_calculate_system/batch-campus/.gitignore
+++ b/Course6_Spring_Batch/ch03_calculate_system/batch-campus/.gitignore
@@ -1,9 +1,9 @@
+/src/main/**/resources/datas/
 HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
-!**/src/main/**/resources/datas/**
 !**/src/test/**/build/
 
 ### STS ###
