--- a/Course7_Redis_Webflux/ch03_webflux/webflux1/src/main/resources/application.yml
+++ b/Course7_Redis_Webflux/ch03_webflux/webflux1/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+spring:
+  r2dbc:
+    url: r2dbc:mysql://localhost:3306/fastsns?userSSL=false&useUnicode=true&PublicKeyRetrieval=true&serverTimezone=Asia/Seoul
+    username: root
+    password: root1234!!
 logging:
   level:
-    root: DEBUG
+    root: INFO
