--- a/Course7_Redis_Webflux/ch03_webflux/webflux1/build.gradle
+++ b/Course7_Redis_Webflux/ch03_webflux/webflux1/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 	implementation 'io.asyncer:r2dbc-mysql:1.0.2' // spi 1.0.0 (spring boot3)
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
