--- a/Course7_Redis_Webflux/ch03_webflux/webflux1/src/main/resources/application.yml
+++ b/Course7_Redis_Webflux/ch03_webflux/webflux1/src/main/resources/application.yml
@@ -3,6 +3,10 @@ spring:
     url: r2dbc:mysql://localhost:3306/fastsns?userSSL=false&useUnicode=true&PublicKeyRetrieval=true&serverTimezone=Asia/Seoul
     username: root
     password: root1234!!
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
 logging:
   level:
     root: INFO
