--- a/Course7_Redis_Webflux/ch03_webflux/webflux1/build.gradle
+++ b/Course7_Redis_Webflux/ch03_webflux/webflux1/build.gradle
@@ -21,6 +21,14 @@ repositories {
 	mavenCentral()
 }
 
+tasks.withType(Test).all {
+	if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_13)) {
+		jvmArgs += [
+				"-XX:+AllowRedefinitionToAddDeleteMethods"
+		]
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
@@ -28,10 +36,12 @@ dependencies {
 	implementation 'io.asyncer:r2dbc-mysql:1.0.2' // spi 1.0.0 (spring boot3)
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation 'io.projectreactor.tools:blockhound:1.0.8.RELEASE'
 }
 
 tasks.named('test') {
