--- a/Course7_Redis_Webflux/ch04_accessorWaitSystem/flow/src/main/resources/application.yml
+++ b/Course7_Redis_Webflux/ch04_accessorWaitSystem/flow/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
     redis:
       host: localhost
       port: 6379
+schedule:
+  enable: true
 ---
 spring:
   config:
@@ -14,3 +16,5 @@ spring:
     redis:
       host: localhost
       port: 63790
+schedule:
+  enable: false
